-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0 Beta 1
-
Windows 7, 64bit, msvc 2010
-
f1d18a2ede78a97c152dd50c3899df51829c4260,827a616c3a357ddd79b4e59848c57fcc6f82fa18, Font * issue f8a14f150aaa783a790aad9a2dcfe2f47a2fe09c (qtactiveqt/dev, 3.2.2015, 5.5)
This problem can be found e.g. in ActiveQt example qutlook, which doesn't compile in Qt5 due to incorrectly generated MSOUTL.cpp/.h. Examples of discrepancies to Qt4 generated versions of same files:
- Qt5 is generating function declarations for some property setter functions that are missing from Qt4. Unclear which version is correct, needs more investigation.
- Qt5 is generating return statements for void functions, which is clearly wrong. Probably related to QMetaMethod::typeName() change where it now returns void instead of empty string.
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
- relates to
-
QTBUG-43446 The 'type mismatch' error is reported when calling a COM object method returning QVariant
-
- Closed
-
-
QTBUG-44048 Support calling functions that take an IDispatch** parameter
-
- Closed
-
| For Gerrit Dashboard: QTBUG-26587 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 32261,1 | Fix generation of return statements for void functions in dumpcpp | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |
| 34418,5 | Fix dumpcpp tool to work with revision 7 metaobject format. | master | qt/qtactiveqt | Status: MERGED | +2 | 0 |
| 105167,2 | dumpcpp: Add Q_DECLARE_OPAQUE_POINTER() for referenced types. | dev | qt/qtactiveqt | Status: MERGED | +2 | 0 |