Fix generation of return statements for void functions in dumpcpp

Changes in QMetaMethod::typeName() return value caused functions
that return void to incorrectly generate return statments in dumpcpp.

Task-number: QTBUG-26587
Change-Id: Id0abea96234a0a75cab8b53473cfee7e60846499